Improved Kafka receiver with improvit commit.